Add 3GX plugin loader (#6172)
* Initial plugin loader support

* More plugin loader progress

* Organize code and more plugin features

* Fix clang-format

* Fix compilation and add android gui

* Fix clang-format

* Fix macos build

* Fix copy-paste bug and clang-format

* More merge fixes

* Make suggestions

* Move global variable to static member

* Fix typo

* Apply suggestions

* Proper initialization order

* Allocate plugin memory from SYSTEM instead of APPLICATION

* Do not mark free pages as RWX

* Fix plugins in old 3DS mode.

* Implement KernelSetState and notif 0x203

* Apply changes

* Remove unused variable

* Fix dynarmic commit

* Sublicense files with MIT License

* Remove non-ascii characters from license

--- a/src/citra_qt/configuration/configure_system.ui
+++ b/src/citra_qt/configuration/configure_system.ui
@@ -340,6 +340,27 @@
           </property>
          </widget>
         </item>
+        <item row="13" column="0">
+          <widget class="QLabel" name="label_plugin_loader">
+            <property name="text">
+              <string>3GX Plugin Loader:</string>
+            </property>
+          </widget>
+        </item>
+        <item row="13" column="1">
+          <widget class="QCheckBox" name="plugin_loader">
+            <property name="text">
+              <string>Enable 3GX plugin loader</string>
+            </property>
+          </widget>
+        </item>
+        <item row="14" column="1">
+          <widget class="QCheckBox" name="allow_plugin_loader">
+            <property name="text">
+              <string>Allow games to change plugin loader state</string>
+            </property>
+          </widget>
+        </item>
        </layout>
       </widget>
      </item>
