Per-Game Settings: options to reset game settings (#6219)

--- a/src/citra_qt/configuration/configure_per_game.ui
+++ b/src/citra_qt/configuration/configure_per_game.ui
@@ -177,6 +177,13 @@
           </property>
          </spacer>
         </item>
+        <item>
+         <widget class="QPushButton" name="button_reset_per_game">
+          <property name="text">
+           <string>Reset Game Settings</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </item>
