Change Monoscopic Render mode to a dropdown (#6215)

--- a/src/citra_qt/configuration/configure_enhancements.ui
+++ b/src/citra_qt/configuration/configure_enhancements.ui
@@ -207,20 +207,31 @@
         </item>
        </layout>
       </item>
-       <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_9">
-           <item>
-           <widget class="QCheckBox" name="mono_render_left_eye">
-             <property name="toolTip">
-               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;If false, right eye will be used. Useful if using ReShade&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-             </property>
-             <property name="text">
-               <string>Render Left Eye in Monoscopic Mode</string>
-             </property>
-           </widget>
-           </item>
-         </layout>
-       </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_9">
+        <item>
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Eye to Render in Monoscopic Mode</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="mono_rendering_eye">
+          <item>
+           <property name="text">
+            <string>Left Eye (default)</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Right Eye</string>
+           </property>
+          </item>
+         </widget>
+        </item>
+       </layout>
+      </item>
      </layout>
     </widget>
    </item>
@@ -369,7 +380,7 @@
   <tabstop>texture_filter_combobox</tabstop>
   <tabstop>render_3d_combobox</tabstop>
   <tabstop>factor_3d</tabstop>
-  <tabstop>mono_render_left_eye</tabstop>
+  <tabstop>mono_rendering_eye</tabstop>
   <tabstop>layout_combobox</tabstop>
   <tabstop>swap_screen</tabstop>
   <tabstop>upright_screen</tabstop>
